--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@splinetool/react-spline": "^2.2.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.2.6",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
