--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@react-email/components": "0.0.19",
     "@react-map/brazil": "^1.0.3",
     "@react-spring/parallax": "^9.7.3",
     "@react-spring/web": "^9.7.3",
     "@splinetool/react-spline": "^2.2.6",
+    "@types/react-input-mask": "^3.0.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.1.3",
@@ -30,10 +33,13 @@
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
+    "react-email": "2.1.4",
     "react-fast-marquee": "^1.6.4",
     "react-hook-form": "^7.51.4",
+    "react-input-mask": "^2.0.4",
     "react-scroll-parallax": "^3.4.5",
+    "resend": "^3.2.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
